<!--
  ~     Jaron  Copyright (C) 2019  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <https://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <https://www.gnu.org/licenses/why-not-lgpl.html>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchParent"
    android:padding="@dimen/eight"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="com.nsnik.nrs.jaron.view.fragments.dialogs.AddExpenseFragment">

    <TextView
        android:id="@+id/newExpenseDate"
        style="@style/wrapContent"
        android:layout_margin="@dimen/sixteen"
        android:paddingTop="@dimen/eight"
        android:paddingBottom="@dimen/eight"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newExpenseTagsContainer"
        tools:text="Updated on 10/03/1996" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newExpenseCreate"
        style="@style/wrapContent"
        android:layout_margin="@dimen/eight"
        android:text="@string/newExpenseCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newExpenseDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newExpenseCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight"
        android:text="@string/newExpenseCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newExpenseDate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newExpenseTagsContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight"
        android:hint="@string/newExpenseTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newExpenseDescriptionContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newExpenseTags"
            style="@style/matchParent"
            android:inputType="text"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newExpenseValueContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight"
        android:hint="@string/newExpenseAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newExpenseValue"
            style="@style/matchParent"
            android:inputType="numberDecimal"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newExpenseTitleContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight"
        android:hint="@string/newExpenseTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newExpenseValueContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newExpenseTitle"
            style="@style/matchParent"
            android:inputType="text"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newExpenseDescriptionContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight"
        android:hint="@string/newExpenseDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newExpenseTitleContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newExpenseDescription"
            style="@style/matchParent"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
