...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchParent"
    tools:context="com.nsnik.nrs.jaron.view.fragments.ExpenseListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenseFragmentExpenseList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        style="@style/matchParent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expenseFragmentAddExpense"
        style="@style/wrapContent"
        android:layout_margin="@dimen/sixteen"
        android:src="@drawable/ic_baseline_add_24px"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
