/*
 *     Jaron  Copyright (C) 2019  Nikhil Soni
 *     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
 *     This is free software, and you are welcome to redistribute it
 *     under certain conditions; type `show c' for details.
 *
 * The hypothetical commands `show w' and `show c' should show the appropriate
 * parts of the General Public License.  Of course, your program's commands
 * might be different; for a GUI interface, you would use an "about box".
 *
 *   You should also get your employer (if you work as a programmer) or school,
 * if any, to sign a "copyright disclaimer" for the program, if necessary.
 * For more information on this, and how to apply and follow the GNU GPL, see
 * <https://www.gnu.org/licenses/>.
 *
 *   The GNU General Public License does not permit incorporating your program
 * into proprietary programs.  If your program is a subroutine library, you
 * may consider it more useful to permit linking proprietary applications with
 * the library.  If this is what you want to do, use the GNU Lesser General
 * Public License instead of this License.  But first, please read
 * <https://www.gnu.org/licenses/why-not-lgpl.html>.
 */

package com.nsnik.nrs.jaron

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.rule.ActivityTestRule
import com.nsnik.nrs.jaron.view.MainActivity
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class ExpenseFragmentListTest {

    @get:Rule
    var activityRule: ActivityTestRule<MainActivity> = ActivityTestRule(MainActivity::class.java)

    @Test
    fun shouldDisplayButtonToAddExpense() {
        onView(withId(R.id.expenseFragmentAddExpense)).check(matches(isDisplayed()))
    }

    @Test
    fun shouldHaveExpenseList() {
        onView(withId(R.id.expenseFragmentExpenseList)).check(matches(isDisplayed()))
    }


    @Test
    fun shouldDisplayCreateExpenseDialog() {
        onView(withId(R.id.expenseFragmentAddExpense)).perform(click())
        onView(withId(R.id.newExpenseValue)).check(matches(isDisplayed()))
    }

    @Test
    fun shouldAddItemToExpenseList() {
        onView(withId(R.id.expenseFragmentAddExpense)).perform(click())

        onView(withId(R.id.newExpenseValue)).perform(typeText("400"))
        onView(withId(R.id.newExpenseTitle)).perform(typeText("Grocery"))
        onView(withId(R.id.newExpenseDescription)).perform(typeText("Daily Stuff"), closeSoftKeyboard())
        onView(withId(R.id.newExpenseTags)).perform(typeText("#food"), closeSoftKeyboard())

        onView(withId(R.id.newExpenseCreate)).perform(click())
        onView(withId(R.id.newExpenseValue)).check(ViewAssertions.doesNotExist())

        onView(withId(R.id.expenseFragmentExpenseList)).check(matches(hasDescendant(withText("Grocery"))))
    }
}